src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void* cv_createTonemapReinhard_0(float gamma, float intensity, float light_adapt, float color_adapt);
extern "C" __declspec(dllexport) void* cv_createTonemapMantiuk_0(float gamma, float scale, float saturation);
extern "C" __declspec(dllexport) void* cv_createAlignMTB_0(int max_bits, int exclude_range, bool cut);
extern "C" __declspec(dllexport) void* cv_createCalibrateDebevec_0(int samples, float lambda, bool random);
extern "C" __declspec(dllexport) void* cv_createCalibrateRobertson_0(int max_iter, float threshold);
extern "C" __declspec(dllexport) void* cv_createMergeDebevec_0();
extern "C" __declspec(dllexport) void* cv_createMergeMertens_0(float contrast_weight, float saturation_weight, float exposure_weight);
extern "C" __declspec(dllexport) void* cv_createMergeRobertson_0();
extern "C" __declspec(dllexport) void cv_decolor_0(void* src, void* grayscale, void* color_boost);
extern "C" __declspec(dllexport) void cv_seamlessClone_0(void* src, void* dst, void* mask, cv::Point p, void* blend, int flags);
extern "C" __declspec(dllexport) void cv_colorChange_0(void* src, void* mask, void* dst, float red_mul, float green_mul, float blue_mul);
extern "C" __declspec(dllexport) void cv_illuminationChange_0(void* src, void* mask, void* dst, float alpha, float beta);
extern "C" __declspec(dllexport) void cv_textureFlattening_0(void* src, void* mask, void* dst, float low_threshold, float high_threshold, int kernel_size);
extern "C" __declspec(dllexport) void cv_edgePreservingFilter_0(void* src, void* dst, int flags, float sigma_s, float sigma_r);
extern "C" __declspec(dllexport) void cv_detailEnhance_0(void* src, void* dst, float sigma_s, float sigma_r);
extern "C" __declspec(dllexport) void cv_pencilSketch_0(void* src, void* dst1, void* dst2, float sigma_s, float sigma_r, float shade_factor);
extern "C" __declspec(dllexport) void cv_stylization_0(void* src, void* dst, float sigma_s, float sigma_r);
extern "C" __declspec(dllexport) void cv_correctChromaticAberration_0(void* input_image, void* coefficients, void* output_image, cv::Size image_size, int calib_degree, int bayer_pattern);
extern "C" __declspec(dllexport) void cv_loadChromaticAberrationParams_0(void* node, void* coeffMat, cv::Size calib_size, int degree);
extern "C" __declspec(dllexport) void cv_ccm_gammaCorrection_0(void* src, void* dst, double gamma);
extern "C" __declspec(dllexport) void cv_cuda_nonLocalMeans_0(void* src, void* dst, float h, int search_window, int block_size, int borderMode, void* stream);
extern "C" __declspec(dllexport) void cv_cuda_fastNlMeansDenoising_0(void* src, void* dst, float h, int search_window, int block_size, void* stream);
extern "C" __declspec(dllexport) void cv_cuda_fastNlMeansDenoisingColored_0(void* src, void* dst, float h_luminance, float photo_render, int search_window, int block_size, void* stream);