src/OpenCV5Sharp/Generated/NativeMethods.Photo.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_createTonemapReinhard_0(float gamma, float intensity, float light_adapt, float color_adapt);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_createTonemapMantiuk_0(float gamma, float scale, float saturation);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_createAlignMTB_0(int max_bits, int exclude_range, [MarshalAs(UnmanagedType.U1)] bool cut);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_createCalibrateDebevec_0(int samples, float lambda, [MarshalAs(UnmanagedType.U1)] bool random);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_createCalibrateRobertson_0(int max_iter, float threshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_createMergeDebevec_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_createMergeMertens_0(float contrast_weight, float saturation_weight, float exposure_weight);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_createMergeRobertson_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_decolor_0(MatHandle src, MatHandle grayscale, MatHandle color_boost);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_seamlessClone_0(MatHandle src, MatHandle dst, MatHandle mask, Point p, MatHandle blend, int flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_colorChange_0(MatHandle src, MatHandle mask, MatHandle dst, float red_mul, float green_mul, float blue_mul);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_illuminationChange_0(MatHandle src, MatHandle mask, MatHandle dst, float alpha, float beta);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_textureFlattening_0(MatHandle src, MatHandle mask, MatHandle dst, float low_threshold, float high_threshold, int kernel_size);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_edgePreservingFilter_0(MatHandle src, MatHandle dst, int flags, float sigma_s, float sigma_r);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_detailEnhance_0(MatHandle src, MatHandle dst, float sigma_s, float sigma_r);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_pencilSketch_0(MatHandle src, MatHandle dst1, MatHandle dst2, float sigma_s, float sigma_r, float shade_factor);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_stylization_0(MatHandle src, MatHandle dst, float sigma_s, float sigma_r);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_correctChromaticAberration_0(MatHandle input_image, MatHandle coefficients, MatHandle output_image, Size image_size, int calib_degree, int bayer_pattern);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_loadChromaticAberrationParams_0(FileNodeHandle node, MatHandle coeffMat, Size calib_size, int degree);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_ccm_gammaCorrection_0(MatHandle src, MatHandle dst, double gamma);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_cuda_nonLocalMeans_0(IntPtr src, IntPtr dst, float h, int search_window, int block_size, int borderMode, IntPtr stream);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_cuda_fastNlMeansDenoising_0(IntPtr src, IntPtr dst, float h, int search_window, int block_size, IntPtr stream);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_cuda_fastNlMeansDenoisingColored_0(IntPtr src, IntPtr dst, float h_luminance, float photo_render, int search_window, int block_size, IntPtr stream);
    }
}
